...
          ],
        ),
        const SizedBox(height: 20),

        if (criticaUsuario == null)
          ElevatedButton(
            key: const Key('botonEscribirCritica'),
            style: ElevatedButton.styleFrom(
              foregroundColor: mostrarCritica ? Colors.white : Colors.black,
              backgroundColor:
                  mostrarCritica ? Colors.redAccent : Colors.blueAccent,
            ),
            onPressed: () {
...
                    ),
                  );
                }),
              ),
              const SizedBox(height: 15),
              TextField(
                key: const Key('TextField_Critica'),
                controller: comentarioController,
                maxLines: 3,
                onChanged: (_) => setState(() {}),
                decoration: InputDecoration(
                  hintText: 'Escribe tu crítica aquí...',
                  hintStyle: const TextStyle(color: Colors.white38),
...
                  fontSize: 12,
                  fontStyle: FontStyle.italic,
                ),
              ),
              const SizedBox(height: 10),
              ElevatedButton(
                key: const Key('buttonGuardarCritica'),
                onPressed: (_guardando || _comentarioVacio)
                    ? null
                    : () => _guardarCritica(criticasProvider),
                child: Text(_guardando ? "Enviando..." : "Enviar crítica"),
              ),
            ],
...
