...
          ],
        ),
        actions: [
          TextButton(
            onPressed: () => Navigator.of(context).pop(false),
            child: const Text(
              'Cancelar',
              key: Key('cancelarRecuperacion'),
              style: TextStyle(color: Color(0xFFAAAAAA)),
            ),
          ),
          TextButton(
            onPressed: () => Navigator.of(context).pop(true),
...
              ),
            ),
            _construirCuerpo(),
            SizedBox(
              width: double.infinity,
              child: ElevatedButton(
                key: const Key('boton_enviar'),
                onPressed: () {
                  if (selectedTab == 0) {
                    _iniciarSesion();
                  } else {
                    _registrarUsuario();
                  }
...
        return Column(
          children: [
            const SizedBox(height: 24),
            const Text("Email", style: TextStyle(fontWeight: FontWeight.bold)),
            const SizedBox(height: 8),
            TextField(
              key: const Key('textfield_email_login'),
              controller: emailController,
              textInputAction: TextInputAction.next,
              decoration: const InputDecoration(
                prefixIcon: Icon(Icons.email_outlined, color: Colors.white54),
                labelText: "tu@email.com",
                floatingLabelBehavior: FloatingLabelBehavior.never,
...
            const Text(
              "Contraseña",
              style: TextStyle(fontWeight: FontWeight.bold),
            ),
            const SizedBox(height: 8),
            TextField(
              key: const Key('textfield_password_login'),
              controller: passwordController,
              obscureText: !_mostrarContrasena,
              textInputAction: TextInputAction.done,
              onSubmitted: (_) => _iniciarSesion(),
              decoration: InputDecoration(
                prefixIcon: Icon(Icons.lock_outline, color: Colors.white54),
...
