...
      ...(criticasAmigos ?? []),
    ];

    return LayoutBuilder(
      builder: (context, constraints) {
        return InkWell(
          key: Key('card_pelicula'),
          borderRadius: BorderRadius.circular(16),
          onTap: () {
            showDialog(
              context: context,
              builder: (context) => Dialog(
                shape: RoundedRectangleBorder(
...
