...
    return Padding(
      padding: const EdgeInsets.all(20.0),
      child: Column(
        children: [
          // Barra de búsqueda
          TextField(
            key: const Key('textfield_buscar'),
            controller: _buscarController,
            decoration: InputDecoration(
              hintText: "Buscar películas...",
              hintStyle: const TextStyle(color: Colors.white54),
              prefixIcon: const Icon(Icons.search, color: Colors.white54),
              suffixIcon: _buscarController.text.isNotEmpty
...
